fix bug and generator